--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <!-- Required meta tags -->
@@ -8,19 +8,153 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-
-    <title>Hello</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>VENTA DE CARROS</title>
 </head>
 
 <body>
-    <h1>hellow, world!</h1>
-
 
     <!-- jQuery, Popper.js, and Bootstrap JS -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <div class="jumbotron">
+        <h1>VENTA DE CARROS</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <p>
+                    <h2>¿QUE CARRO DE SEAS?</h2>
+                    <p>busca tu comodidad, tu gusto y elegancia en un vehiculo</p>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h2>¿QUE QUIERES?</h2>
+                    <P>elije lo que mas te gusta, en cada item encontraras ladescripcion necesaria.</P>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <h2>¿FORMA DE PAGO?</h2>
+                    <p>tenemos diferentes formas de pago</p>
+                </p>
+            </div>
+        </div>
+
+
+        <div class="d-flex flex-wrap">
+            <div class="ventas d-flex flex-column justify-content-between">
+                <div>
+                    <h2>MAZDA 6</h2>
+                    <p>El Mazda 6 es un cinco plazas que se ofrece con carrocerías sedán de cuatro puertas, liftback de cinco puertas y familiar de cinco puertas. Tiene motor delantero transversal y tracción delantera o a las cuatro ruedas.</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-reserve">seleccionar</button>
+                </div>
+
+
+            </div>
+            <div class="ventas d-flex flex-column justify-content-between">
+                <div>
+                    <h2>CHEVROLET TRACKER</h2>
+                    <p>Conoce la Tracker Turbo con Alerta de Colisión Frontal y Asistencia de Frenado Automático. Con 6 Airbags, Cargador Inalámbrico, Conexión Wifi, Sunroof Panorámico y Mucho Más. Tecnología y confort. Potencia y Seguridad. Motor1.2L Turbo.
+                        Diseño Renovado.</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-reserve">seleccionar</button>
+                </div>
+
+
+            </div>
+
+            <div class="ventas d-flex flex-column justify-content-between">
+                <div>
+                    <h2>KIA SPORTAGE</h2>
+                    <p>El Kia Sportage es un SUV de carácter familiar fabricado por KIA y que compite directamente en el reñido segmento de los SUV medianos. KIA tiene en el KIA Sportage a uno de los modelos fundamentales para entender el auge de los SUV
+                        en nuestro mercado. Es un coche que se sitúa entre el KIA Stonic y el KIA Sorento.</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-reserve">seleccionar</button>
+                </div>
+
+            </div>
+
+            <div class="ventas d-flex flex-column justify-content-between">
+                <div>
+                    <h2>FORD F150</h2>
+                    <p>Como parte de un mayor enfoque en el ahorro de combustible, toda la gama de motores para el F-150 (excluyendo el SVT Raptor) se ha actualizado para el año modelo 2011. Junto con dos nuevos motores V8, el F-150 ganó un nuevo motor V6
+                        de 3.7 L de base, y un potente doble turbo de 3.5 L V6, apodado EcoBoost de Ford.</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-reserve">seleccionar</button>
+                </div>
+
+
+            </div>
+            <div class="ventas d-flex flex-column justify-content-between">
+                <div>
+                    <h2>BMW M5</h2>
+                    <p>Innovador sistema de tracción integral del potente motor del BMW M5 completamente nuevo. Un auto que te ofrece toda una experiencia al alcance de tus manos. Encuentra tu BMW favorito. Cotiza tu BMW. Modelos: Serie 1, Serie 2, Serie
+                        3, Serie 4, Serie 5, Serie 6, X.</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-reserve">seleccionar</button>
+                </div>
+
+
+            </div>
+
+            <div class="ventas d-flex flex-column justify-content-between">
+                <div>
+                    <h2>MERCEDEZ BENZ AMG-GT</h2>
+                    <p>El Mercedes-AMG GT (C190/R190) es un automóvil deportivo Gran Turismo de 2 puertas biplaza, con motor central-delantero montado longitudinalmente y de tracción trasera o total, desarrollado y producido por el fabricante alemán Mercedes-AMG,
+                        filial de Mercedes-Benz Daimler AG, desde 2015.</p>
+                </div>
+                <div>
+                    <button class="btn btn-primary btn-reserve">seleccionar</button>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    </div>
+
 
 </body>
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4 d-flex flex-column flex-wrap">
+                <a href="https//:www.facebook.com">Facebook</a>
+                <a href="https//:www.twitter.com">Twitter</a>
+                <a href="https//:www.instagram.com">Instagram</a>
+                <a href="https//:www.google.com">Google</a>
+            </div>
+
+            <div class="col-sm-4">
+                <h3>Oficina central</h3>
+                <address>
+            <p> 45#13 a 11</p>
+            <p>+573174557139</p>
+            <p>contacto@ventas.com</p>
+            
+        </address>
+            </div>
+
+
+            <div class="col-sm-4 d-flex flex-column">
+                <a href="https//:www.facebook.com">contacto</a>
+                <a href="https//:www.twitter.com">terminos y condiciones</a>
+                <a href="https//:www.instagram.com">pagos</a>
+                <a href="https//:www.google.com">quienes somos</a>
+            </div>
+        </div>
+
+    </div>
+</footer>
 
 </html>
